Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48117

[Windows]: When pushing one of the extra buttons on a mouse then it should send WM_APPCOMMAND to the application but it does not

XMLWordPrintable

    • 781ab4b76ed7812970856be1f1e1606b52aaca88 , 1af2b861d8915cfa9fe2d79f6ebb2ae22749f37b (qtbase/5.6, 22.9.2015, 5.6b)

      [Windows]: When pushing one of the extra buttons on a mouse then it should send WM_APPCOMMAND to the application but it does not. The reason for this is because the WM_XBUTTONDOWN is being handled and therefore it prevents the WM_XBUTTONUP from sending and subseqently the WM_APPCOMMAND is not sent either.

      Fex WM_APPCOMMAND with lParam == APPCOMMAND_BROWSER_FORWARD is not received when using a ??????? mouse.

        1. qtbug48117.zip
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-48117
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes